--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Epam nodejs course",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "task1": "nodemon module1/task1.js"
   },
   "author": "",
   "license": "ISC",
