--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Epam nodejs course",
   "main": "index.js",
   "scripts": {
-    "task1": "nodemon module1/task1.js"
+    "task1": "nodemon module1/task1.js",
+    "task2": "nodemon module1/task2.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.4"
+  },
+  "dependencies": {
+    "csvtojson": "^2.0.10"
   }
 }
