--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "task1": "nodemon module1/task1.js",
-    "task2": "nodemon module1/task2.js"
+    "task2": "nodemon module1/task2.js",
+    "task3": "nodemon --exec babel-node module1/task3.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
