--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "task1": "nodemon module1/task1.js",
     "task2": "nodemon module1/task2.js",
-    "task3": "nodemon --exec babel-node module1/task3.js"
+    "task3": "nodemon --exec babel-node module1/task3.js",
+    "module2:task1": "nodemon --exec babel-node module2/main.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +15,12 @@
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.6.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "express": "^4.17.1"
   }
 }
