--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "ajv": "^6.12.3",
     "bcrypt": "^5.0.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "uuid": "^8.3.0"
   }
 }
