--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "task1": "nodemon module1/task1.js",
     "task2": "nodemon module1/task2.js",
     "task3": "nodemon --exec babel-node module1/task3.js",
-    "module2:task1": "nodemon --exec babel-node module2/main.js"
+    "module2:task1": "nodemon --exec babel-node module2/main.js",
+    "start": "nodemon server/main.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +16,17 @@
     "@babel/core": "^7.10.5",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@types/express": "^4.17.7",
+    "@types/lodash": "^4.14.159",
+    "@types/node": "^14.6.0",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.6.0",
-    "nodemon": "^2.0.4"
+    "eslint": "^7.7.0",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "ajv": "^6.12.3",
