--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
+    "pg": "^8.3.2",
+    "sequelize": "^6.3.4",
     "uuid": "^8.3.0"
   }
 }
