--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ajv": "^6.12.3",
     "bcrypt": "^5.0.0",
     "csvtojson": "^2.0.10",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
     "pg": "^8.3.2",
