--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.1",
     "ajv": "^6.12.3",
     "bcrypt": "^5.0.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
+    "morgan": "^1.10.0",
     "pg": "^8.3.2",
     "sequelize": "^6.3.4",
     "uuid": "^8.3.0"
