--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.3.2",
     "sequelize": "^6.3.4",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "winston": "^3.3.3"
   }
 }
