--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "rootDir": "./",
-    "outDir": "./build"
+    "outDir": "./build",
+    "experimentalDecorators": true
   }
 }
